# wpathr

./: README.md  args.py  pyproject.toml  setup.py  wpathr.py
wpathr/: __main__.py  args.py  wpathr.py
