[tool.poetry]
name = "wpathr"
version = "0.5.0"
description = "Windows path utility & launch tool"
authors = ["Ville M. Vainio <ville.vainio@basware.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
argp = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
